--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -15,16 +15,16 @@
         <ImageView
             android:id="@+id/DetailedCar"
             android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_height="0dp"
             android:layout_marginStart="23dp"
-            android:layout_marginTop="29dp"
+            android:layout_marginTop="27dp"
             android:layout_marginEnd="23dp"
 
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="342dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/DetailedMan"
+            app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,14 +78,13 @@
             android:id="@+id/btnWhatsApp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="75dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#9F9BA1"
             android:text="Whatsapp"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/DetailedPhone"
             app:layout_constraintVertical_bias="1.0" />
@@ -100,7 +99,8 @@
             android:text="Call"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/map" />
 
         <EditText
             android:id="@+id/tvdescreption"
@@ -117,6 +117,19 @@
             app:layout_constraintEnd_toEndOf="@+id/DetailedMan"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/DetailedMan" />
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="177dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginBottom="14dp"
+            android:background="@android:drawable/ic_dialog_map"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnCall"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btnWhatsApp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
