--- a/app/src/main/res/layout/fragment_update_profile2.xml
+++ b/app/src/main/res/layout/fragment_update_profile2.xml
@@ -71,6 +71,16 @@
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF" />
 
+        <EditText
+            android:id="@+id/etAdress5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="address..."
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:textColorHint="#FFFFFF" />
+
         <ImageView
             android:id="@+id/ivUserUserDetailsEdit"
             android:layout_width="90dp"
