added a map that shows the users current location TODO add hotel location on the map

--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -78,7 +78,7 @@
             android:id="@+id/btnWhatsApp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="75dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#9F9BA1"
@@ -93,7 +93,8 @@
             android:id="@+id/btnCall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="-15dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#9F9BA1"
             android:text="Call"
@@ -120,16 +121,17 @@
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/map"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="177dp"
+            android:layout_width="94dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="220dp"
             android:layout_marginEnd="55dp"
-            android:layout_marginBottom="14dp"
+            android:layout_marginBottom="40dp"
             android:background="@android:drawable/ic_dialog_map"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnCall"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btnWhatsApp" />
+            app:layout_constraintTop_toTopOf="@+id/btnWhatsApp"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
