--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -3,41 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="#DA4539FB">
+    android:layout_height="wrap_content"
+    android:background="#E4E3E0"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/ivPhoto"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_weight="1"
-        tools:srcCompat="@drawable/ic_3" />
+        android:contentDescription="@null"
+        android:padding="8dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_3" />
 
-    <TextView
-        android:id="@+id/tvNameRestItem"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="#FFFFFF" />
+        android:orientation="vertical"
+        android:paddingStart="16dp">
 
-    <TextView
-        android:id="@+id/tvPhoneRestItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textColor="#FFFFFF" />
+        <TextView
+            android:id="@+id/tvNameRestItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Name"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvPhoneRestItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone Number"
+            android:textColor="#808080"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/ivFavoriteIcon"
         android:layout_width="48dp"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/ic_fav"
-        android:backgroundTint="#000000"
-        android:clickable="true"
-        android:contentDescription="TODO"
-        android:foregroundTint="#000000"
-        tools:ignore="TouchTargetSizeCheck" />
+        android:background="#FFFFFF"
+        android:contentDescription="@null"
+        android:padding="8dp"
+        android:src="@drawable/ic_fav" />
 
 </LinearLayout>
