--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -1,54 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<androidx.cardview.widget.CardView
+     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#E4E3E0"
-    android:padding="16dp">
-
-    <ImageView
-        android:id="@+id/ivPhoto"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:contentDescription="@null"
-        android:padding="8dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_3" />
+    xmlns:app="http://schemas.android.com/apk/res"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="16dp"
+    tools:ignore="ExtraText">
+   >
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="16dp">
+        android:padding="14dp">
 
-        <TextView
-            android:id="@+id/tvNameRestItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restaurant Name"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/ivPhoto"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@null"
+            android:padding="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_3" />
 
-        <TextView
-            android:id="@+id/tvPhoneRestItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone Number"
-            android:textColor="#808080"
-            android:textSize="14sp" />
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvNameRestItem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Hotel Name"
+                android:textStyle="bold"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/ivFavoriteIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/ic_fav"
+                android:clickable="true"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:id="@+id/tvPhoneRestItem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Phone Number"
+                    android:textColor="#808080"
+                    />
+
+            </LinearLayout>
+
+
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/ivFavoriteIcon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center_vertical"
-        android:background="#FFFFFF"
-        android:contentDescription="@null"
-        android:padding="8dp"
-        android:src="@drawable/ic_fav" />
-
-</LinearLayout>
+    </androidx.cardview.widget.CardView>
