--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -1,139 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@drawable/pic2"
     tools:context=".Fragments.DetailedFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/DetailedCar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/pic2">
+        android:layout_height="217dp"
+        android:layout_marginBottom="16dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        tools:srcCompat="@drawable/ic_3" />
 
+    <TextView
+        android:id="@+id/DetailedMan"
+        android:layout_width="match_parent"
+        android:layout_height="89dp"
+        android:layout_marginBottom="8dp"
+        android:text="Name"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/DetailedCar"
-            android:layout_width="300dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="23dp"
+    <EditText
+        android:id="@+id/tvdescreption"
+        android:layout_width="match_parent"
+        android:layout_height="177dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#9F9BA1"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:minHeight="48dp"
+        android:text="Description"
+        android:textColor="#FFFFFF" />
 
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/ic_3" />
+    <TextView
+        android:id="@+id/tvadress"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:text="Address"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/DetailedMan"
-            android:layout_width="220dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="12dp"
-            android:text="name"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/tvdescreption"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.476"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints" />
+    <TextView
+        android:id="@+id/DetailedPhone"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:text="Phone"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tvadress"
-            android:layout_width="211dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="96dp"
-            android:layout_marginEnd="101dp"
-            android:text="address"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/DetailedPhone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvdescreption"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:id="@+id/DetailedPhone"
-            android:layout_width="211dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="120dp"
-            android:gravity="center"
-            android:text="Phone"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent" />
+    <LinearLayout
+        android:layout_width="386dp"
+        android:layout_height="110dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnWhatsApp"
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="75dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:backgroundTint="#9F9BA1"
-            android:text="Whatsapp"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/DetailedPhone"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <Button
-            android:id="@+id/btnCall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="16dp"
-            android:backgroundTint="#9F9BA1"
-            android:text="Call"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <EditText
-            android:id="@+id/tvdescreption"
-            android:layout_width="226dp"
-            android:layout_height="95dp"
-            android:layout_marginBottom="68dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:minHeight="48dp"
-            android:text="description"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toTopOf="@+id/DetailedPhone"
-            app:layout_constraintEnd_toEndOf="@+id/DetailedMan"
-            app:layout_constraintHorizontal_bias="0.444"
-            app:layout_constraintStart_toStartOf="@+id/DetailedMan" />
+            android:text="WhatsApp"
+            android:textColor="#000000" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/map5"
-            android:layout_width="62dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="16dp"
-            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:src="@android:drawable/ic_dialog_map"
-            app:backgroundTint="#9F9BA1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnCall"
-            app:layout_constraintHorizontal_bias="0.739"
-            app:layout_constraintStart_toEndOf="@+id/btnWhatsApp" />
+            app:backgroundTint="#9F9BA1" />
 
+        <Button
+            android:id="@+id/btnCall"
+            android:layout_width="3dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="#9F9BA1"
+            android:text="Call"
+            android:textColor="#000000" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
