--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-     xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res"
+    xmlns:app2="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
+    app2:cardBackgroundColor="#2B92A8"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
     tools:ignore="ExtraText">
-   >
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,9 +29,9 @@
             android:src="@drawable/ic_3" />
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvNameRestItem"
@@ -38,8 +39,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Hotel Name"
-                android:textStyle="bold"
-                android:textSize="15sp" />
+                android:textColor="#000000"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/ivFavoriteIcon"
@@ -51,23 +53,23 @@
                 android:clickable="true"
                 tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
         </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvPhoneRestItem"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp">
+                android:layout_weight="1"
+                android:text="Phone Number"
+                android:textColor="#000000" />
 
-                <TextView
-                    android:id="@+id/tvPhoneRestItem"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Phone Number"
-                    android:textColor="#808080"
-                    />
-
-            </LinearLayout>
+        </LinearLayout>
 
 
     </LinearLayout>
-    </androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>
